--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HQ'
 - !lcsh 'Marriage'
+- GITenberg
 tableOfContents: Foreword -- Romance -- The revelation -- Facts -- An awakening --
   The natural marriage -- The social marriage -- The marriage of convenience -- Conclusion
   -- The business of marriage -- Primitive bondage -- Nature’s method -- Economic
